# ccli-prompt

./: .gitignore  LICENSE  README.md  ccli.zsh  daemon.py  install.sh  prompt.md  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml  workflow.yml
src/ccli_prompt/: __init__.py  cli.py  daemon.py  install.py  wizard.py
src/ccli_prompt/data/: ccli.zsh
